[metadata]
name = ros2_dijkstra
version = 0.0.0
description = ROS 2 dijkstra
author = someone
author_email = someone@someplace.com
license = Apache-2.0

[options]
packages = find:
install_requires =
    rclpy
    setuptools

[options.entry_points]
console_scripts =
    ros_dijkstra = ros2_dijkstra.ros_dijkstra:main
    rviz_controller = ros2_dijkstra.rviz_controller:main
    
[develop]
script_dir=$base/lib/ros2_dijkstra

[install]
install_scripts=$base/lib/ros2_dijkstra
