[metadata]
name = ros2_neural_net
version = 0.1.0
description = ROS2 package that publishes visualization markers for RViz
author = Your Name
author_email = your.email@example.com
license = Apache-2.0
url = https://github.com/yourusername/ros2_neural_net

[options]
packages = find:
install_requires =
    rclpy
    visualization_msgs

zip_safe = false

[options.entry_points]
console_scripts =
    rviz_controller = ros2_neural_net.rviz_controller:main
