[metadata]
name = ros2_neural_net
version = 0.0.0
description = ROS 2 neural net controller
author = someone
author_email = someone@someplace.com
license = Apache-2.0

[options]
packages = find:
install_requires =
    rclpy
    setuptools

[options.entry_points]
console_scripts =
    ros_neural_net = ros2_neural_net.ros_neural_net:main
    rviz_controller = ros2_neural_net.rviz_controller:main
    
[develop]
script_dir=$base/lib/ros2_neural_net

[install]
install_scripts=$base/lib/ros2_neural_net
